Prevents top of text from being cut off with large input

--- a/static/less/master.less
+++ b/static/less/master.less
@@ -32,7 +32,7 @@ section.natural-lang {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    padding-top: 30px;
 
     textarea {
       border-radius: 15px;
@@ -49,6 +49,7 @@ section.natural-lang {
 
     h1 {
       margin: 0;
+      margin-top: -140px;
       font-size: 300px;
       font-family: 'Germania One', cursive;
       line-height: 282px;
